--- a/UberClon/View/Base.lproj/Main.storyboard
+++ b/UberClon/View/Base.lproj/Main.storyboard
@@ -113,26 +113,48 @@
             </objects>
             <point key="canvasLocation" x="136.80000000000001" y="133.5832083958021"/>
         </scene>
-        <!--View Controller-->
+        <!--Rider View Controller-->
         <scene sceneID="Jem-xy-xEA">
             <objects>
-                <viewController id="djT-Hw-pMg" sceneMemberID="viewController">
+                <viewController id="djT-Hw-pMg" customClass="RiderViewController" customModule="UberClon" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="TpC-NL-Ckt">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xGV-bT-x1T">
-                                <rect key="frame" x="166" y="323" width="42" height="21"/>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="ds4-xw-UHm">
+                                <rect key="frame" x="8" y="74" width="359" height="359"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="ds4-xw-UHm" secondAttribute="height" multiplier="1:1" id="hHu-DM-y5S"/>
+                                </constraints>
+                            </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nqT-l1-3oK">
+                                <rect key="frame" x="133" y="441" width="108" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                                <state key="normal" title="Llamar a un taxi"/>
+                                <connections>
+                                    <action selector="callUberAction:" destination="djT-Hw-pMg" eventType="touchUpInside" id="ncQ-Wh-Idr"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="ds4-xw-UHm" firstAttribute="leading" secondItem="PUf-ml-uFl" secondAttribute="leading" constant="8" id="FhF-ER-Wa2"/>
+                            <constraint firstItem="PUf-ml-uFl" firstAttribute="trailing" secondItem="ds4-xw-UHm" secondAttribute="trailing" constant="8" id="SfT-nU-foV"/>
+                            <constraint firstItem="ds4-xw-UHm" firstAttribute="top" secondItem="PUf-ml-uFl" secondAttribute="top" constant="10" id="lzB-Cg-zcP"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="PUf-ml-uFl"/>
                     </view>
-                    <navigationItem key="navigationItem" id="YM6-iv-iVj"/>
+                    <navigationItem key="navigationItem" id="YM6-iv-iVj">
+                        <barButtonItem key="leftBarButtonItem" title="Cerrar sesión" id="rbl-Uc-Sjh">
+                            <connections>
+                                <action selector="signOutAction:" destination="djT-Hw-pMg" id="osn-y6-Gfw"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="callUberButton" destination="nqT-l1-3oK" id="HdA-WC-zQb"/>
+                        <outlet property="map" destination="ds4-xw-UHm" id="2WL-zw-OeW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="adL-mZ-ejJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -156,10 +178,10 @@
             </objects>
             <point key="canvasLocation" x="1053.5999999999999" y="133.5832083958021"/>
         </scene>
-        <!--Collection View Controller-->
+        <!--Driver View Controller-->
         <scene sceneID="NJA-SC-TJG">
             <objects>
-                <collectionViewController id="vds-oL-g33" sceneMemberID="viewController">
+                <collectionViewController id="vds-oL-g33" customClass="DriverViewController" customModule="UberClon" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="InW-n4-sI8">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -178,7 +200,6 @@
                                     <rect key="frame" x="0.0" y="0.0" width="166" height="144"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </view>
-                                <color key="backgroundColor" red="1" green="0.14959081090000001" blue="0.0086397835220000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </collectionViewCell>
                         </cells>
                         <connections>
@@ -186,7 +207,9 @@
                             <outlet property="delegate" destination="vds-oL-g33" id="mPP-TJ-Alj"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" id="kBJ-d6-CN8"/>
+                    <navigationItem key="navigationItem" id="kBJ-d6-CN8">
+                        <barButtonItem key="leftBarButtonItem" title="Cerrar sesión" id="PQs-hU-Rmx"/>
+                    </navigationItem>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="l7V-Hn-z3T" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
