--- a/UberClon/View/Base.lproj/Main.storyboard
+++ b/UberClon/View/Base.lproj/Main.storyboard
@@ -187,19 +187,53 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Vu4-TM-It2">
-                            <size key="itemSize" width="166" height="144"/>
+                            <size key="itemSize" width="175" height="175"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="rNC-Ol-j38">
-                                <rect key="frame" x="0.0" y="0.0" width="166" height="144"/>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="RiderCell" id="rNC-Ol-j38" customClass="RiderCell" customModule="UberClon" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="175" height="175"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                    <rect key="frame" x="0.0" y="0.0" width="166" height="144"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="175" height="175"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A 5 km de distancia" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="XlA-JM-xzy">
+                                            <rect key="frame" x="26" y="147" width="123" height="19.5"/>
+                                            <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="14"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="users" translatesAutoresizingMaskIntoConstraints="NO" id="V8D-uA-Z0p">
+                                            <rect key="frame" x="32.5" y="8" width="110" height="110"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="V8D-uA-Z0p" secondAttribute="height" multiplier="1:1" id="dvd-fe-8a0"/>
+                                                <constraint firstAttribute="width" constant="110" id="i3U-FO-kWe"/>
+                                                <constraint firstAttribute="height" constant="110" id="qsz-uK-JIc"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="correo@gmail.com" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VvW-QB-Zt2">
+                                            <rect key="frame" x="18" y="121" width="139" height="22"/>
+                                            <fontDescription key="fontDescription" name="Avenir-Black" family="Avenir" pointSize="16"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
                                 </view>
+                                <constraints>
+                                    <constraint firstItem="XlA-JM-xzy" firstAttribute="top" secondItem="VvW-QB-Zt2" secondAttribute="bottom" constant="4" id="1mq-iP-xEu"/>
+                                    <constraint firstItem="V8D-uA-Z0p" firstAttribute="centerX" secondItem="rNC-Ol-j38" secondAttribute="centerX" id="7zm-TT-7cd"/>
+                                    <constraint firstItem="V8D-uA-Z0p" firstAttribute="top" secondItem="rNC-Ol-j38" secondAttribute="top" constant="8" id="I6D-3X-JRg"/>
+                                    <constraint firstItem="VvW-QB-Zt2" firstAttribute="centerX" secondItem="rNC-Ol-j38" secondAttribute="centerX" id="XoP-e2-eig"/>
+                                    <constraint firstItem="VvW-QB-Zt2" firstAttribute="top" secondItem="V8D-uA-Z0p" secondAttribute="bottom" constant="3" id="eX3-VT-SjY"/>
+                                    <constraint firstItem="XlA-JM-xzy" firstAttribute="centerX" secondItem="rNC-Ol-j38" secondAttribute="centerX" id="mAV-yw-1H4"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="emailLabel" destination="VvW-QB-Zt2" id="546-xK-D0b"/>
+                                    <outlet property="riderDistance" destination="XlA-JM-xzy" id="MIk-lA-Rvd"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
@@ -234,4 +268,7 @@
             <point key="canvasLocation" x="1054" y="903"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="users" width="46.428211212158203" height="46.428211212158203"/>
+    </resources>
 </document>
