--- a/UberClon/View/Base.lproj/Main.storyboard
+++ b/UberClon/View/Base.lproj/Main.storyboard
@@ -242,7 +242,11 @@
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" id="kBJ-d6-CN8">
-                        <barButtonItem key="leftBarButtonItem" title="Cerrar sesión" id="PQs-hU-Rmx"/>
+                        <barButtonItem key="leftBarButtonItem" title="Cerrar sesión" id="PQs-hU-Rmx">
+                            <connections>
+                                <action selector="signOutAction:" destination="vds-oL-g33" id="np9-JN-Xgr"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="l7V-Hn-z3T" userLabel="First Responder" sceneMemberID="firstResponder"/>
